push up to version 2.5
and all changes since last version from Aug 28

and fix the update script to do extinfo not just on
mediawikis table

Change-Id: I2d8ac4618e7ac3d545765b6b4dd2dc8e383d695e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wikistats (2.5) unstable; urgency=low
+
+  * please see gerrit/git log since the last version
+
+ -- Daniel Zahn <dzahn@wikimedia.org>  Mon, 09 Dec 2013 21:23:23 -0800
+
 wikistats (2.4) unstable; urgency=low
 
   * add missing snippets for query used in unified table view,
