wikistats - bump up package version
Change-Id: I20c909767420dc178d4e08558bb7e3de1f87e97f

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wikistats (2.6) unstable; urgency=low
+
+  * please see gerrit/git log since the last version
+
+ -- Daniel Zahn <dzahn@wikimedia.org>  Thu, 21 Aug 2014 19:04:23 -0800
+
 wikistats (2.5) unstable; urgency=low
 
   * please see gerrit/git log since the last version
