upgrade to version 2.7
Change-Id: I4e1acefe89946d89db12883fb14d82c77a6f21ea

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wikistats (2.7) unstable; urgency=low
+
+  * add gamepedias (bug 59718)
+  * fixes for w3cwikis (bug 41023)
+
+ -- Daniel Zahn <dzahn@wikimedia.org>  Fri, 29 Aug 2014 17:07:23 -0800
+
 wikistats (2.6) unstable; urgency=low
 
   * please see gerrit/git log since the last version
