--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wikistats (2.8) unstable; urgency=low
+
+  * add sourceforge wikis (bug 58396)
+  * add orain wikis (bug 70309)
+
+ -- Daniel Zahn <dzahn@wikimedia.org>  Wed, 10 Sep 2014 19:37:23 -0800
+
 wikistats (2.7) unstable; urgency=low
 
   * add gamepedias (bug 59718)
