--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wikistats (2.11) unstable; urgency=low
+
+  * add table for miraheze (T107398)
+
+ -- Daniel Zahn <dzahn@wikimedia.org>  Thu, 13 Aug 2015 16:21:23 -0800
+
 wikistats (2.10) unstable; urgency=low
 
   * remove wikki and gentoo tables because they are down entirely
